--- a/quizzy-app/package.json
+++ b/quizzy-app/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://marina-majden.github.io/quizzy-app/",
-  "name": "quizzy-app",
+  "name": "quizzy",
   "private": true,
   "version": "0.0.0",
   "type": "module",
